# zaberov_dz_12_2_5-6

./: .gitignore  README.md  pyproject.toml
htmlcov/: d_c810615cce0f7acb___init___py.html  d_c810615cce0f7acb_arrs_py.html  d_c810615cce0f7acb_dicts_py.html  index.html  status.json
tests/: test_arrs.py  test_dicts.py
utils/: dicts.py
