[tool.poetry]
name = "zaberov-dz-12-2-5-6"
version = "0.1.0"
description = ""
authors = ["Dim-ON1975 <zaberov.dv@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
